force-app/main/default/objects/Delivery__c/Delivery__c.object-meta.xml
<CustomObject>
    <label>배송서</label>
    <nameField>
        <displayFormat>DO{YYYYMMDD}-{00000}</displayFormat>
        <label>Delivery Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>