force-app/main/default/objects/Delivery__c/fields/ActualDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>ActualDeliveryDate__c</fullName>
    <label>Actual Delivery Date</label>
    <type>DateTime</type>
</CustomField>