force-app/main/default/objects/Delivery__c/fields/EndCustomer__c.field-meta.xml
<CustomField>
    <fullName>EndCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End Customer</label>
    <referenceTo>EndCustomer__c</referenceTo>
    <relationshipLabel>Delivery</relationshipLabel>
    <relationshipName>Delivery</relationshipName>
    <type>Lookup</type>
</CustomField>