force-app/main/default/objects/Delivery__c/fields/FulfillmentOrder__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fulfillment Order</label>
    <referenceTo>FulfillmentOrder__c</referenceTo>
    <relationshipLabel>Delivery</relationshipLabel>
    <relationshipName>Delivery</relationshipName>
    <type>Lookup</type>
</CustomField>