force-app/main/default/objects/Delivery__c/fields/ShipFromAddress__c.field-meta.xml
<CustomField>
    <fullName>ShipFromAddress__c</fullName>
    <label>Ship From Address</label>
    <type>Address</type>
</CustomField>