force-app/main/default/objects/Delivery__c/fields/ShiptoAccountID__c.field-meta.xml
<CustomField>
    <fullName>ShiptoAccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Delivery (Ship to Account)</relationshipLabel>
    <relationshipName>Delivery1</relationshipName>
    <type>Lookup</type>
</CustomField>