force-app/main/default/objects/Delivery__c/fields/ShipToAddress__c.field-meta.xml
<CustomField>
    <fullName>ShipToAddress__c</fullName>
    <label>Ship To Address</label>
    <type>Address</type>
</CustomField>