force-app/main/default/objects/Delivery__c/fields/ShipToLatitude__c.field-meta.xml
<CustomField>
    <fullName>ShipToLatitude__c</fullName>
    <label>Ship To Latitude</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>