force-app/main/default/objects/Delivery__c/fields/ShipToLongitude__c.field-meta.xml
<CustomField>
    <fullName>ShipToLongitude__c</fullName>
    <label>Ship To Longitude</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>