force-app/main/default/objects/Delivery__c/fields/TrackingUrl__c.field-meta.xml
<CustomField>
    <fullName>TrackingUrl__c</fullName>
    <label>Tracking Url</label>
    <type>Url</type>
</CustomField>